--- a/PhysPy-wk7_2015S.ipynb
+++ b/PhysPy-wk7_2015S.ipynb
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -789,13 +789,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\"A'dab\", \"A'idah\", \"A'li\", \"A'mal\", 'Aabha', 'Aadab', 'Aafreen', 'Aaisha', 'Aakanksha', 'Aalia', 'Aaliya', 'Aaliyah', 'Aalliyah', 'Aamaal', 'Aamanda', 'Aamani', 'Aamber', 'Aaminah', 'Aamira', 'Aamirah', 'Aamiya', 'Aana', 'Aanisah', 'Aanya', 'Aaradhya', 'Aaria', 'Aariana', 'Aarianna', 'Aariel', 'Aarielle', 'Aarushi', 'Aaryah', 'Aaryana', 'Aaryanna', 'Aasia', \"A'dab\", \"A'idah\", \"A'li\", \"A'mal\", 'Aabha', 'Aadab', 'Aafreen', 'Aaisha', 'Aakanksha', 'Aalia', 'Aaliya', 'Aaliyah', 'Aalliyah', 'Aamaal', 'Aamanda', 'Aamani', 'Aamber', 'Aaminah', 'Aamira', 'Aamirah', 'Aamiya', 'Aana', 'Aanisah', 'Aanya', 'Aaradhya', 'Aaria', 'Aariana', 'Aarianna', 'Aariel', 'Aarielle', 'Aarushi', 'Aaryah', 'Aaryana', 'Aaryanna', 'Aasia']\n"
+      "<generator object name_generator at 0x0000000003D04168>\n",
+      "Aalliyah\n",
+      "a\n"
      ]
     }
    ],
    "source": [
     "import urllib2 \n",
     "import re\n",
+    "import random as rand\n",
     "\n",
     "male_name_lst = []\n",
     "female_name_lst = []\n",
@@ -816,7 +819,6 @@
     "\tinfile = urllib2.urlopen(f_names) \n",
     "\tfemale_text = infile.read()   \n",
     "\tinfile.close() \n",
-    "\t#print female_text\n",
     "\t\n",
     "\t#finds all names and puts in list\n",
     "\tmale_name_lst_temp = re.findall('ils\">.*</s', male_text)\n",
@@ -838,23 +840,36 @@
     "    string = name.lstrip('ils\">').rstrip('</s')\n",
     "    female_names.append(string)\n",
     "\n",
+    "\n",
     "#print female_names\n",
     "\n",
-    "a = open( 'woman_names', 'w') \n",
-    "b = open( 'man_names', 'w')\n",
+    "#a = open( 'woman_names', 'w') \n",
+    "#b = open( 'man_names', 'w')\n",
     "\n",
-    "a.write(str(female_names))\n",
-    "b.write(str(male_names))\n",
+    "#a.write(str(female_names))\n",
+    "#b.write(str(male_names))\n",
     "\n",
-    "a.close()\n",
-    "b.close()\n",
+    "#a.close()\n",
+    "#b.close()\n",
     "\n",
     "#with open('woman_names', 'r') as f:\n",
     "    #print f.read()\n",
     "\n",
     "\n",
+    "def name_generator(sex):\n",
+    "    if sex == 'male':\n",
+    "        yield rand.choice(male_names)\n",
+    "        \n",
+    "    else: \n",
+    "        yield rand.choice(female_names)\n",
     "\n",
-    "\n"
+    "#y=0\n",
+    "#while y<15:\n",
+    "print name_generator('male')\n",
+    "#y+=1\n",
+    "print female_names[12]\n",
+    "foo = ['a', 'b', 'c', 'd', 'e']\n",
+    "print(rand.choice(foo))\n"
    ]
   },
   {
