--- a/PhysPy-wk6_2015S.ipynb
+++ b/PhysPy-wk6_2015S.ipynb
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -543,7 +543,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<type 'function'> <type 'generator'>\n"
+      "<type 'function'> <type 'generator'>\n",
+      "<generator object generate_integers at 0x0000000003E954C8>\n"
      ]
     }
    ],
@@ -557,7 +558,8 @@
     "        #set_trace()\n",
     "        print 'The {:d}th time generate_integers() is called'.format(i+1)\n",
     "gen = generate_integers(6)\n",
-    "print type(generate_integers), type(gen)\n"
+    "print type(generate_integers), type(gen)\n",
+    "print gen"
    ]
   },
   {
