--- a/PhysPy-wk7_2015S.ipynb
+++ b/PhysPy-wk7_2015S.ipynb
@@ -780,19 +780,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<generator object name_generator at 0x0000000003D04168>\n",
-      "Aalliyah\n",
-      "a\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<method-wrapper 'next' of generator object at 0x0000000003FDE480>"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -857,19 +858,15 @@
     "\n",
     "\n",
     "def name_generator(sex):\n",
-    "    if sex == 'male':\n",
-    "        yield rand.choice(male_names)\n",
-    "        \n",
-    "    else: \n",
-    "        yield rand.choice(female_names)\n",
+    "    while k:\n",
+    "        if sex == 'male':\n",
+    "            yield male_names\n",
     "\n",
-    "#y=0\n",
-    "#while y<15:\n",
-    "print name_generator('male')\n",
-    "#y+=1\n",
-    "print female_names[12]\n",
-    "foo = ['a', 'b', 'c', 'd', 'e']\n",
-    "print(rand.choice(foo))\n"
+    "        else: \n",
+    "            yield female_names\n",
+    "\n",
+    "x = name_generator('male')\n",
+    "x.next"
    ]
   },
   {
