--- a/PhysPy-wk7_2015S.ipynb
+++ b/PhysPy-wk7_2015S.ipynb
@@ -780,20 +780,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 942,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<method-wrapper 'next' of generator object at 0x0000000003FDE480>"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "StopIteration",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-942-f10164bc7d58>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m     \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mname_generator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'male'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 64\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mStopIteration\u001b[0m: "
+     ]
     }
    ],
    "source": [
@@ -801,72 +802,87 @@
     "import re\n",
     "import random as rand\n",
     "\n",
-    "male_name_lst = []\n",
-    "female_name_lst = []\n",
-    "z = 0 #number of pages iterated through\n",
-    "\n",
-    "while z <=1: #iterates through baby-names website pages for names \n",
-    "\n",
-    "\tm_names = 'http://www.prokerala.com/kids/baby-names/boy/page-' + str(z) + '.html'\n",
-    "\tf_names = 'http://www.prokerala.com/kids/baby-names/girl/page-' + str(z) + '.html'\n",
-    "\n",
-    "\t#male names\n",
-    "\tinfile = urllib2.urlopen(m_names) \n",
-    "\tmale_text = infile.read()   \n",
-    "\tinfile.close() \n",
-    "\t#print male_text\n",
-    "\n",
-    "\t#female names\n",
-    "\tinfile = urllib2.urlopen(f_names) \n",
-    "\tfemale_text = infile.read()   \n",
-    "\tinfile.close() \n",
-    "\t\n",
-    "\t#finds all names and puts in list\n",
-    "\tmale_name_lst_temp = re.findall('ils\">.*</s', male_text)\n",
-    "\tmale_name_lst += male_name_lst_temp\n",
-    "\tfemale_name_lst_temp = re.findall('ils\">.*</s', female_text)\n",
-    "\tfemale_name_lst += female_name_lst_temp\n",
-    "\n",
-    "\tz+=1\n",
-    "\n",
-    "male_names = []\n",
-    "for name in male_name_lst: # strips names of unnecessary characters\n",
-    "    string = name.lstrip('ils\">').rstrip('</s')\n",
-    "    male_names.append(string)\n",
-    "\n",
-    "#print male_names\n",
-    "\n",
-    "female_names = []\n",
-    "for name in female_name_lst: #same as above\n",
-    "    string = name.lstrip('ils\">').rstrip('</s')\n",
-    "    female_names.append(string)\n",
-    "\n",
-    "\n",
-    "#print female_names\n",
-    "\n",
-    "#a = open( 'woman_names', 'w') \n",
-    "#b = open( 'man_names', 'w')\n",
-    "\n",
-    "#a.write(str(female_names))\n",
-    "#b.write(str(male_names))\n",
-    "\n",
-    "#a.close()\n",
-    "#b.close()\n",
-    "\n",
-    "#with open('woman_names', 'r') as f:\n",
-    "    #print f.read()\n",
-    "\n",
     "\n",
     "def name_generator(sex):\n",
-    "    while k:\n",
-    "        if sex == 'male':\n",
-    "            yield male_names\n",
+    "    male_name_lst = []\n",
+    "    female_name_lst = []\n",
+    "    z = 0 #number of pages iterated through\n",
     "\n",
-    "        else: \n",
-    "            yield female_names\n",
+    "    while z <=1: #iterates through baby-names website pages for names \n",
     "\n",
-    "x = name_generator('male')\n",
-    "x.next"
+    "        m_names = 'http://www.prokerala.com/kids/baby-names/boy/page-' + str(z) + '.html'\n",
+    "        f_names = 'http://www.prokerala.com/kids/baby-names/girl/page-' + str(z) + '.html'\n",
+    "\n",
+    "        #male names\n",
+    "        infile = urllib2.urlopen(m_names) \n",
+    "        male_text = infile.read()   \n",
+    "        infile.close() \n",
+    "        #print male_text\n",
+    "\n",
+    "        #female names\n",
+    "        infile = urllib2.urlopen(f_names) \n",
+    "        female_text = infile.read()   \n",
+    "        infile.close() \n",
+    "\n",
+    "        #finds all names and puts in list\n",
+    "        male_name_lst_temp = re.findall('ils\">.*</s', male_text)\n",
+    "        male_name_lst += male_name_lst_temp\n",
+    "        female_name_lst_temp = re.findall('ils\">.*</s', female_text)\n",
+    "        female_name_lst += female_name_lst_temp\n",
+    "\n",
+    "        z+=1\n",
+    "\n",
+    "    male_names = []\n",
+    "    for name in male_name_lst: # strips names of unnecessary characters\n",
+    "        string = name.lstrip('ils\">').rstrip('</s')\n",
+    "        male_names.append(string)\n",
+    "\n",
+    "    #print male_names\n",
+    "\n",
+    "    female_names = []\n",
+    "    for name in female_name_lst: #same as above\n",
+    "        string = name.lstrip('ils\">').rstrip('</s')\n",
+    "        female_names.append(string)\n",
+    "\n",
+    "    #print female_names[20]\n",
+    "    \n",
+    "    m=0\n",
+    "    f=0\n",
+    "    if sex == 'male':\n",
+    "        while m < len(male_names):\n",
+    "            yield male_names[m]\n",
+    "            m+=1\n",
+    "\n",
+    "    if sex == 'female':\n",
+    "        while f< len(female_names):\n",
+    "            yield female_names[f]\n",
+    "            f+=1\n",
+    "            \n",
+    "    x = name_generator('male')\n",
+    "x.next()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 854,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "StopIteration",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-854-e05f366da090>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mStopIteration\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "x.next()"
    ]
   },
   {
